--- a/views/index.erb
+++ b/views/index.erb
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html manifest='default.appcache'>
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <title>JumpClone</title>
-    <style>
-      body {
-        margin: 0px;
-        padding: 0px;
-        text-align: center;
-      }
-      canvas {
-        outline: 0;
-        border: 1px solid #000;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/css/game.css">
   </head>
   <body>
     <canvas id='c'></canvas>
